<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0E4192"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:freezesText="true"
        android:padding="20dp"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="80sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/incrementButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/incrementButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increment"
        android:textAlignment="center"
        style="@style/titleTextFont.buttonTextFont"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/randomColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/counter" />

    <Button
        android:id="@+id/randomColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_color_string"
        android:textAlignment="center"
        style="@style/titleTextFont.buttonTextFont"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/switchVis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/incrementButton" />

    <Button
        android:id="@+id/switchVis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_visibility"
        android:textAlignment="center"
        style="@style/titleTextFont.buttonTextFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/randomColor"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/background"
        android:elevation="4dp"
        app:title="COUNTER"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
