<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0E4192"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dice_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice_number"
        android:textSize="80sp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dice_image"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/dice_image"
        android:layout_width="270dp"
        android:layout_height="281dp"
        android:contentDescription="@string/dice_image"
        android:scaleType="centerCrop"
        android:src="@drawable/dice_1"
        app:layout_constraintBottom_toTopOf="@id/roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dice_number" />

    <Button
        android:id="@+id/roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/throw_dice"
        android:textAlignment="center"
        style="@style/titleTextFont.buttonTextFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dice_image" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/background"
        android:elevation="4dp"
        app:title="DICE ROLLER"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dice_image"
        app:layout_constraintEnd_toEndOf="@id/dice_image"
        app:layout_constraintTop_toTopOf="@id/dice_image"
        app:layout_constraintBottom_toBottomOf="@id/dice_image"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
